2007-09-26  Goedson Teixeira Paixao  <goedson@debian.org>

	* gnotime.desktop: Updated desktop entry

	* configure.in: Removed debian/Makefile from the list of output
	files.

2007-09-24  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in: Removed Makefiles for the manual translations from
	the list of output files.

2007-09-23  Goedson Teixeira Paixao  <goedson@debian.org>

	* Released 2.2.3
	
	* NEWS: Added release notes for version 2.2.3

	* doc/C/gnotime.xml: Removed notes about the manual being outdated
	since it is now, hopefully, updated.

	* doc/Makefile.am: disabled installation of manual translations
	since they are outdated

	* doc/C/gnotime.xml: Added section about reports.

2007-09-21  Goedson Teixeira Paixao  <goedson@debian.org>

	* doc/C/gnotime.xml: 
	- Fixed some typos.
	- Updated section about timeout dialogs
	- Updated Free Software Foundation address
	- Added section about gnotime-remote

2007-09-20  Goedson Teixeira Paixao  <goedson@debian.org>

	* pt_BR.po: Fixed typo.

2007-09-17  Goedson Teixeira Paixao  <goedson@debian.org>

	* doc/C/gnotime.xml: Added information about creating new projects.
	Removed the "The New Project Dialog" section

	* src/menus.c: Renamed the Edit menu to Projects

2007-09-15  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/props-proj.c (prop_dialog_new): changed the section name for
	the properties dialog.

	* doc/C/gnotime.xml: Added information about the properties dialog
	and started to restructure the manual

2007-09-13  Goedson Teixeira Paixao  <goedson@debian.org>

	* doc/C/gnotime.xml: fixed some typos and reviewed the text for
	sections 1 to 3.

	* src/export.c (export_err, export_really): Use gtk_message_dialog
	instead of the deprecated gnome_error_dialog
	(export_file_picker): Use GtkFileChooser instead of the deprecated
	GtkFileSelection
	(export_show_error_message): created utility function to display
	error messages in the export module
